# xmipp4-core

./: .clang-tidy  .gitignore  .sonarcloud.properties  CHANGELOG.md  CMakeLists.txt  README.md  pyproject.toml  renovate.json  requirements.txt  setup.py  sonar-project.properties
doc/doxygen/: CMakeLists.txt  Doxyfile
src/: CMakeLists.txt  backend.cpp  config.hpp  core_version.cpp  dummy_parallel_executor.cpp  dummy_parallel_executor.hpp  dynamic_library.cpp  dynamic_library_detail.hpp  dynamic_library_detail_posix.inl  dynamic_library_detail_windows.inl  execution_context.cpp  find_most_suitable_backend.hpp  find_most_suitable_backend.inl  hostname.cpp  interface_catalog.cpp  interface_registry.cpp  memory_mapped_file.cpp  memory_mapped_file_detail.hpp  memory_mapped_file_detail_posix.inl  named_service_manager_implementation.hpp  numerical_type.cpp  numerical_type_promotion_lattice.hpp  numerical_type_promotion_lattice.inl  plugin.cpp  plugin_loader.cpp  plugin_loader.hpp  plugin_manager.cpp  select_backend.hpp  service_catalog.cpp  thread_pool_parallel_executor.cpp  thread_pool_parallel_executor.hpp  xmipp.cpp
src/communication/: communicator.cpp  communicator_manager.cpp  device_communicator_manager.cpp  device_transaction_scope.cpp  host_communicator_manager.cpp
src/compute/: checks.cpp  device_buffer.cpp  device_communicator_manager.cpp  device_manager.cpp  distribute.cpp  host_buffer.cpp  host_buffer.hpp  host_communicator_manager.cpp  host_device.cpp  host_device.hpp  host_device_backend.cpp  host_memory_allocator.cpp  host_memory_allocator.hpp  host_memory_resource.cpp  host_memory_resource.hpp  host_memory_transfer.cpp  host_memory_transfer.hpp  host_memory_transfer_backend.cpp  host_memory_transfer_backend.hpp  host_queue.cpp  memory_resource.cpp  memory_resource_kind.cpp  memory_transfer.cpp  memory_transfer_key.hpp  memory_transfer_key.inl  memory_transfer_manager.cpp  unified_memory_allocator.cpp
src/core/: CMakeLists.txt  config.hpp  core_version.cpp  device_properties.cpp  execution_context.cpp  find_most_suitable_backend.hpp  fixed_float.cpp  interface_catalog.cpp  named_service_manager_implementation.hpp  named_service_manager_implementation.inl  numerical_type.cpp  numerical_type_promotion_lattice.hpp  plugin_loader.cpp  plugin_loader.hpp  plugin_manager.cpp  rust_bridge.hpp  service_catalog.cpp
src/core_internal/: CMakeLists.txt
src/functional/: arithmetic.cpp  array_cast.cpp  array_creation.cpp  array_transfer.cpp  cast.cpp  creation.cpp  transfer.cpp
src/hardware/: buffer.cpp  buffer_sentinel.cpp  device.cpp  device_backend.cpp  device_context.cpp  device_manager.cpp  device_to_host_event.cpp  host_buffer.cpp  host_buffer.hpp  host_memory_allocator.cpp  host_memory_allocator.hpp  host_memory_heap.cpp  host_memory_heap.hpp  host_memory_resource.cpp  host_memory_resource.hpp  host_memory_transfer.cpp  host_memory_transfer_backend.hpp  memory_allocator_manager.cpp  memory_allocator_pool.cpp  memory_allocator_pool.hpp  memory_heap.cpp  memory_resource.cpp  memory_resource_kind.cpp  memory_transfer.cpp  memory_transfer_key.hpp  memory_transfer_key.inl  memory_transfer_manager.cpp
src/image/: async_loader_manager.cpp  batch_loader_manager.cpp  batch_reader_manager.cpp  caching_batch_reader.cpp  default_async_loader.cpp  default_async_loader.hpp  default_async_loader_backend.cpp  default_async_loader_backend.hpp  lru_async_loader.cpp  lru_async_loader.hpp  lru_async_loader_backend.cpp  lru_async_loader_backend.hpp  lru_batch_loader.cpp  lru_batch_loader.hpp  lru_batch_loader_backend.cpp  lru_batch_loader_backend.hpp  lru_batch_reader.cpp  lru_batch_reader.hpp  lru_batch_reader_backend.cpp  lru_batch_reader_backend.hpp  lru_reader_cache.cpp  lru_reader_cache.hpp  reader_manager.cpp  writer_manager.cpp
src/memory/: aligned_alloc.cpp
src/metadata/: label_mapping.cpp  table.cpp
src/multidimensional/: arithmetic.cpp  array.cpp  array_access_layout.cpp  array_access_layout_builder.cpp  array_access_layout_implementation.hpp  array_access_layout_implementation.inl  array_access_layout_operand.hpp  array_access_layout_operand.inl  array_accessor.cpp  array_allocator.cpp  array_allocator_implementation.cpp  array_allocator_implementation.hpp  array_arithmetic.cpp  array_cast.cpp  array_copy.cpp  array_creators.cpp  array_descriptor.cpp  array_factory.cpp  array_implementation.hpp  array_implementation.inl  array_initializers.cpp  array_iterator.cpp  array_operations.cpp  array_point_operation.hpp  array_transfer.cpp  array_view.cpp  broadcast.cpp  broadcast_error.cpp  context.cpp  contiguous_layout_policy.cpp  core_operation_id.hpp  core_operation_id.inl  default_array.hpp  default_array_allocator.cpp  default_array_allocator.hpp  default_type_promotion_policy.cpp  default_type_promotion_policy.hpp  dispatch.cpp  eager_operation_dispatcher.cpp  eager_operation_dispatcher.hpp  (+31 more)
src/parallel/: dummy_parallel_executor.cpp  dummy_parallel_executor.hpp  thread_pool_parallel_executor.cpp  thread_pool_parallel_executor.hpp
src/system/: dynamic_library.cpp  dynamic_library_handle.hpp  dynamic_library_handle_posix.inl  dynamic_library_handle_windows.inl  host.cpp  memory_mapped_file.cpp  memory_mapped_file_handle.hpp  memory_mapped_file_handle_posix.inl  memory_mapped_file_handle_windows.inl
tests/: .clang-tidy  CMakeLists.txt  test_axis_3d.cpp  test_slice.cpp  test_uuid.cpp  test_version.cpp
tests/assets/: CMakeLists.txt
tests/black-box/: CMakeLists.txt
tests/concurrency/: test_location.cpp  test_semaphore.cpp
tests/image/: test_location.cpp
tests/integration/: CMakeLists.txt
tests/interface-testing/: CMakeLists.txt
tests/math/: test_abs.cpp  test_arithmetic.cpp  test_besel.cpp  test_bessel.cpp  test_bspline.cpp  test_erf.cpp  test_exponential.cpp  test_factorial.cpp  test_hyperbolic.cpp  test_nearest_integer.cpp  test_power.cpp  test_trigonometric.cpp  test_trigonometry.cpp
tests/memory/: test_align.cpp  test_byte_order.cpp  test_pimpl.cpp
tests/metadata/: test_label_map.cpp  test_label_mapping.cpp
tests/multidim/: test_memory_layout.cpp
(+2224 files in other folders)
