[build-system]
requires = [
    "scikit-build-core==0.10"
]
build-backend = "scikit_build_core.build"

[project]
name = "xmipp4-core"
dynamic = ["version"]
authors = [
    { name = "Oier Lauzirika Zarrabeitia", email = "oierlauzi@bizkaia.eu" },
    { name = "Martín Salinas Antón", email = "ssalinasmartin@gmail.com" },
    { name = "Mikel Iceta Tena", email = "m.icetatena@gmail.com" },
]
description = "Core component of the xmipp4 framework"
classifiers = [
	"Topic :: Scientific/Engineering :: Image Processing",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Operating System :: POSIX",
    "Operating System :: MacOS",
    "Operating System :: Windows",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Programming Language :: C++"
]

readme = {file = "README.md", content-type = "text/markdown"}
license = "GPL-3.0-only"

requires-python = ">=3.7"
dependencies = []

[project.urls]
Homepage = "https://github.com/gigabit-clowns/xmipp4-core"

[tool.scikit-build]
experimental=true # For wheel.install-dir
wheel.install-dir="/data"
wheel.py-api = "py3" # Python version agnostic
cmake.version = ">=3.16"
cmake.build-type = "Release"

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "VERSION"
regex = "(?P<value>\\d+\\.\\d+\\.\\d+)"

[tool.scikit-build.cmake.define]
XMIPP4_CORE_BUILD_SPDLOG = {env="XMIPP4_CORE_BUILD_SPDLOG", default="ON"}
XMIPP4_CORE_BUILD_HALF = {env="XMIPP4_CORE_BUILD_HALF", default="ON"}
BUILD_TESTING = "OFF"
CMAKE_INSTALL_LIBDIR = "lib" # avoid using lib64
